--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -26,36 +26,42 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Install pnpm BEFORE setup-node so caching works
+      # Install pnpm (matches packageManager in package.json)
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          run_install: false
 
-      # Enable pnpm via Corepack (fallback)
       - name: Enable corepack
         run: corepack enable
 
+      # Setup Node with pnpm store caching
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "pnpm"
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        with:
-          static_site_generator: nuxt
-
-      - name: Restore cache
+      # Cache node_modules
+      - name: Cache node_modules
         uses: actions/cache@v4
         with:
           path: |
-            dist
-            .nuxt
-          key: ${{ runner.os }}-nuxt-build-${{ hashFiles('dist') }}
+            node_modules
+          key: ${{ runner.os }}-nm-${{ hashFiles('pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-nuxt-build-
+            ${{ runner.os }}-nm-
+
+      # Cache Nuxt build artifacts
+      - name: Cache Nuxt build output
+        uses: actions/cache@v4
+        with:
+          path: |
+            .nuxt
+            dist
+          key: ${{ runner.os }}-nuxt-${{ hashFiles('**/*') }}
+          restore-keys: |
+            ${{ runner.os }}-nuxt-
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
