--- a/content/awards.yml
+++ b/content/awards.yml
@@ -8,12 +8,12 @@ events:
     location: "Carnegie Hall, New York, NY"
     url: "https://americanprotege.com/music-talent-competition-spring-2023/"
   - category: Piano Performance
-    title: "1st Prize -- Charleston Spring 2024 International Piano Competition"
+    title: "1st Prize - Charleston Spring 2024 International Piano Competition"
     date: "2024-03-15"
     location: ""
     url: "https://charlestoncompetition.com/results-spring-music-competition-2024/"
   - category: Piano Performance
-    title: "2025 Canadian International Music Competition"
+    title: "Platinum Medalist - 2025 Canadian International Music Competition"
     date: "2025-02-15"
     location: ""
     url: "https://www.cimconline.com/2024-2025-cimc-results.html#/"
@@ -23,22 +23,6 @@ events:
     location: ""
     url: "https://www.gccseries.online/2022/05/results-best-tchaikovsky-performance.html?m=1"
   - category: Piano Performance
-    title: "Honorable Mention -- Society Of American Musicians Music Competition"
+    title: "Honorable Mention - Society Of American Musicians Music Competition"
     date: "2022-05-07"
-    location: ""
-  - category: Academic
-    title: "National Honor Society"
-    date: "2025-12-31" 
-    location: ""
-  - category: Academic
-    title: "National Honor Society"
-    date: "2024-12-31" 
-    location: ""
-  - category: Podcast
-    title: "AP Scholar With Distinction"
-    date: "2024-12-31"
-    location: ""
-  - category: Academic
-    title: "Seal Of Biliteracy"
-    date: "2023-12-31"
     location: ""
