--- a/content/blog.yml
+++ b/content/blog.yml
@@ -1,2 +1,2 @@
-title: Latest Articles
-description: Some of my recent thoughts on design, development, and the tech industry.
+title: Performance & volunteering
+description: Some of my recent piano competitions & volunteering experience.
