--- a/content/awards.yml
+++ b/content/awards.yml
@@ -26,3 +26,19 @@ events:
     title: "Honorable Mention - Society Of American Musicians Music Competition"
     date: "2022-05-07"
     location: ""
+  - category: Academic
+    title: "National Honor Society"
+    date: "2025-06-15" 
+    location: ""
+  - category: Academic
+    title: "National Honor Society"
+    date: "2024-06-15" 
+    location: ""
+  - category: Academic
+    title: "AP Scholar With Distinction"
+    date: "2024-06-15"
+    location: ""
+  - category: Academic
+    title: "Seal Of Biliteracy"
+    date: "2023-12-31"
+    location: ""
