--- a/content/about.yml
+++ b/content/about.yml
@@ -1,7 +1,7 @@
 title: About Me
-description: Learn more about my journey as a Boston-based UX/UI Designer & Front-End Developer, my design philosophy, and my passion for crafting intuitive digital experiences.
+description: Learn more about my journey as a Chicago-based senior high school student, my design philosophy, and my passion for crafting intuitive digital experiences.
 content: |
-  Hi, I'm **Emma Thompson**, a UX/UI Designer and Front-End Developer based right here in Boston. For the past six years, I've been immersed in the world of digital product creation, focusing on building experiences that are not just functional, but genuinely intuitive and engaging for users.
+  Hi, I'm **Allision Zhang**, based in Chicago suburbs. For the past six years, I've been immersed in the world of digital product creation, focusing on building experiences that are not just functional, but genuinely intuitive and engaging for users.
 
   My path started at **Boston University**, where I earned a degree in Interactive Design. It was there I discovered my dual passion for the visual language of design and the logical puzzle of code. Since then, I've honed my skills in both areas, believing that the best digital products are born from a deep understanding of both aesthetics and implementation.
 
@@ -13,16 +13,16 @@ content: |
 
   ### What Drives Me
 
-  What keeps me excited about this work is the constant learning and the challenge of translating complex ideas into simple, elegant solutions. There's nothing more rewarding than seeing a design come to life and knowing it's making someone's digital interaction easier or more enjoyable.
+  I'm driven by a passion for continuous learning and a desire to make a positive impact through volunteering with my skills.
 
   ### Beyond the Screen
 
-  When I'm not designing or coding, you might find me exploring Boston's latest coffee shops, hiking nearby trails, or occasionally contributing to open-source projects.
+  When I'm not designing or coding, you might find me designing thing, hiking nearby trails, or occasionally contributing to open-source projects.
 
-  Thanks for stopping by. Feel free to browse my [projects](/projects) or [get in touch](/#contact) if you'd like to collaborate!
+  Thanks for stopping by. Feel free [get in touch](/#contact) if you'd like to collaborate!
 images:
-  - src: "/images/allison_chicago.jpg"
-    alt: My coffee workspace
-  - src: https://images.unsplash.com/photo-1744429523595-2c06b8611242?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-    alt: My trip to Tokyo
+  - src: "/images/allison_trip_to_california.jpg"
+    alt: Trip to California
+  - src: "/images/allison_trip_to_italy.jpg"
+    alt: Trip to Italy
  
